# libsparqlclient

./: .gitignore  .gitmodules  .travis.yml  Makefile.am  configure.ac  connection.c  curl.c  datastore-post.c  datastore-put.c  isparql.c  libsparqlclient-config.c  libsparqlclient.3  libsparqlclient.h  libsparqlclient.xml  p_libsparqlclient.h  perform-query.c  query-model.c  query.c  resultset.c  sparql-query.c  update.c  vasprintf.c
debian/: control  isparql.install  libsparqlclient-dev.install  libsparqlclient.install  rules  sparqlclient-utils.install
t/: .gitignore  000-sanity  001-empty  Makefile.am  setup-4store.sh.in  teardown-4store.sh.in
